edited the scripts to start the instrumentation